--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 SharpPhysics - a physics simulation framework written in C#
 
 Requires at least Mono 2.8
+Tested with Mono JIT compiler version 2.8 (tarball Wed Oct 13 05:10:27 CEST 2010)
 
 This project has a BuildBot running at http://noah-vserver.net:8000
 
